--- a/client/src/siteOutil/styles/StyleMonEspace.scss
+++ b/client/src/siteOutil/styles/StyleMonEspace.scss
@@ -4,6 +4,7 @@
   padding-right: 2rem;
   padding-left: 2rem;
   margin-top: 20px;
+  overflow-x: hidden;
 
   .titre-general {
     font-size: 2rem;
@@ -34,6 +35,7 @@
       font-weight: 100;
       padding: 1rem;
       height: fit-content;
+      z-index: 1;
 
       &:hover {
         color: #cccccc;
@@ -49,42 +51,20 @@
     }
 
     .liste-favoris {
-      overflow-x: hidden;
-      width: 100%;
       display: flex;
+      flex-direction: row;
       justify-content: flex-start;
+      width: calc(100% - 7rem);
       gap: max(calc((100% - 50vw) / 4), 1em);
+      transition: transform 0.3s ease;
 
-      .carousel-wrap {
-        margin: 90px auto;
-        padding: 0 5%;
-        width: 80%;
-        position: relative;
+      .element {
+        transition: opacity 0.3s ease;
       }
 
-      .owl-carousel .item {
-        position: relative;
-        z-index: 100;
-        -webkit-backface-visibility: hidden;
-      }
-
-      .owl-nav > div {
-        margin-top: -26px;
-        position: absolute;
-        top: 50%;
-        color: #cdcbcd;
-      }
-
-      .owl-nav i {
-        font-size: 52px;
-      }
-
-      .owl-nav .owl-prev {
-        left: -30px;
-      }
-
-      .owl-nav .owl-next {
-        right: -30px;
+      .element-hidden {
+        opacity: 0;
+        pointer-events: none;
       }
     }
 
